# shopping_assistant_pj

./: .dockerignore  .gitignore  README.md  __init__.py  docker-compose.yml  pyproject.toml  test_agent.ipynb
agent/: API.md  Dockerfile  README.md  __init__.py  env.example  requirements.txt
agent/app/: __init__.py  main.py  routes_admin.py  routes_chat.py
agent/artifacts/: fusion_decision.json  product_ranker.json  relaxed_constraints.json
agent/core/: __init__.py  artifacts.py  config.py  curation.py  storage.py
agent/data/curation/: state.json
agent/data/datasets/: fusion.jsonl  ranker.jsonl  relaxed_constraints.jsonl
agent/data/logs/: chat.jsonl  feedback.jsonl
agent/dspy_modules/: __init__.py  intent.py  recommender.py
agent/graph/: shopping_graph.py
agent/integrations/: __init__.py  mcp_tools.py
agent/train/: __init__.py  build_dataset.py  compile.py
agent/utils/: __init__.py  sse.py
frontend/: .eslintrc.json  Dockerfile  README.md  env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/admin/: _util.ts
frontend/app/api/admin/compile/: route.ts
frontend/app/api/admin/curation/state/: route.ts
frontend/app/api/admin/jobs/[job_id]/: route.ts
frontend/app/api/admin/reload_artifacts/: route.ts
frontend/app/api/chat/stream/: route.ts
frontend/app/api/feedback/: route.ts
frontend/app/ui-prev/: page.tsx
frontend/components/: ChatClient.tsx  ChatClientClassic.tsx
frontend/docs/: ui_ux_renewal.md
frontend/lib/: sse.ts
(+2 files in other folders)
